correct overflows

--- a/style.css
+++ b/style.css
@@ -608,7 +608,7 @@ textarea {
 .actives:active {
   background: #2230d2;
   color: #fff;
-} 
+}
 
 hr {
   background: #0d151e;
@@ -622,11 +622,12 @@ hr {
   bottom: 1rem;
 }
 
- @media (min-width: 769px) and (max-width: 1920px) { 
+@media (min-width: 769px) and (max-width: 1920px) {
   body {
-   margin: auto;
-   min-width: 769px;
-   max-width: 1920px;
+    margin: auto;
+    min-width: 769px;
+    max-width: 1920px;
+    overflow-x: hidden;
   }
 
   .hamburger-menu {
@@ -634,10 +635,11 @@ hr {
   }
 
   .body {
-   padding: 0;
-   margin: 0;
-   overflow: hidden;
+    padding: 0;
+    margin: 0;
+    overflow: hidden;
   }
+
   header {
     display: flex;
     justify-content: space-around;
@@ -699,9 +701,8 @@ hr {
     align-items: start;
     margin: 1rem 15%;
     padding-top: -5rem;
-   
   }
-  
+
   .title h1 {
     font-weight: 700;
     font-size: 48px;
@@ -714,7 +715,7 @@ hr {
     font-size: 20px;
     line-height: 28px;
     color: #344563;
-    height: 122px
+    height: 122px;
   }
 
   .title h2 {
@@ -725,15 +726,15 @@ hr {
   }
 
   .work {
-   padding: 15% 7%;
-   padding-bottom: 10%;
+    padding: 15% 7%;
+    padding-bottom: 10%;
   }
 
   .card-container {
     grid-template-columns: repeat(2, 1fr);
     column-gap: 5rem;
     row-gap: 1rem;
-    padding:4%;
+    padding: 4%;
     width: 100%;
     box-shadow: 5px 10px 20px 12px rgba(0, 0, 0, 0.1);
   }
@@ -747,9 +748,30 @@ hr {
   }
 
   .card-container:nth-child(even) {
-    align-items:center;
+    align-items: center;
   }
-  
+
+  .socials li img {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin-top: -2rem;
+    color: #505f79;
+  }
+
+  .techs ul li img {
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    text-align: center;
+    padding: 0.2rem;
+  }
+
+  .social li a img {
+    margin-right: -1rem;
+    color: #505f79;
+  }
+
   .gb-img img:nth-child(even) {
     width: 100%;
   }
@@ -769,7 +791,7 @@ hr {
     grid-template-columns: repeat(2, 1fr);
     gap: 5rem;
     justify-items: center;
-    align-items:baseline;
+    align-items: baseline;
     padding-top: 8rem;
     padding-left: 6%;
     padding-right: 6%;
@@ -800,6 +822,8 @@ hr {
     line-height: 24px;
     color: #344563;
     padding-bottom: 0.9rem;
+    border-bottom: 2px solid #dfe1e6;
+    padding-top: -2rem;
   }
 
   .heading h3 {
@@ -820,31 +844,10 @@ hr {
     font-weight: 500;
     font-size: 12px;
   }
-  
-  .techs ul li img {
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    text-align: center;
-    padding: 0.2rem;
-  }
-
-  .social li a img{
-    margin-right: -1rem;
-    color: #505f79;
-  }
 
   .socials li a {
     margin-right: -1.5rem;
     width: 20px;
-  }
-
-  .socials li img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    margin-top: -2rem;
-    color: #505f79;
   }
 
   .solid {
@@ -858,11 +861,11 @@ hr {
   .form_container {
     overflow: hidden;
     margin: auto;
-  }
-
-  .under-lines {
-    border-bottom: 2px solid #dfe1e6;
-    padding-top: -2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0;
   }
 
   .form {
@@ -878,102 +881,85 @@ hr {
     position: absolute;
   }
 
-    .form_container {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 0;
-      margin: 0;
-    }
-  
-    .form_container .p {
-      width: 40%;
-      text-align: center;
-      transform: translateY(17%);
-    }
-  
-    .form_heading {
-      padding-top: 5rem;
-      transform: translateY(20%);
-      font-weight: 700;
-      font-size: 40px;
-      font-family: 'Poppins', sans-serif;
-      font-style: normal;
-    }
-  
-    .form_container {
-      display: flex;
-      margin: 0;
-      padding: 0;
-    }
-  
-    form input {
-      border-radius: 0;
-      padding: 0.8rem;
-      width: 150%;
-      color: #172b4d;
-      outline: none;
-      border: 0;
-      margin-bottom: 1rem;
-      font-weight: 400;
-      font-size: 18px;
-      align-items: center;
-      transform: translateX(-18%);
-    }
-  
-    textarea {
-      border-radius:0;
-      outline: none;
-      resize: none;
-      width: 150%;
-      transform: translateX(-18%);
-      height: 10%;
-    }
-  
-    .textarea {
-      font-weight: 400;
-      font-size: 16px;
-      color: #b3bac5;
-      padding: 0.5rem 0.5rem;
-      font-family: 'Poppins', sans-serif;
-    }
-  
-    .button {
-      display: flex;
-      justify-content:center;
-      align-items: center;
-      margin: 1rem 0;
-    }
-  
-    .button .form_btn {
-      border-radius: 0;
-      padding: 0.8rem 1rem;
-      font-size: 17px;
-      font-weight: 500;
-      background-color: #fff;
-      cursor: pointer;
-      text-align: center;
-      letter-spacing: 0.03em;
-      margin-bottom: 2.5rem;
-      margin-right: 2.5rem;
-    }
+  .form_container .p {
+    width: 40%;
+    text-align: center;
+    transform: translateY(17%);
+  }
 
-    .form_btn:hover {
-      background: #6070ff;
-      color: #fff;
-    }
+  .form_heading {
+    padding-top: 5rem;
+    transform: translateY(20%);
+    font-weight: 700;
+    font-size: 40px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+  }
 
-    .actives:active {
-      background: #2230d2;
-      color: #fff;
-    }
+  form input {
+    border-radius: 0;
+    padding: 0.8rem;
+    width: 150%;
+    color: #172b4d;
+    outline: none;
+    border: 0;
+    margin-bottom: 1rem;
+    font-weight: 400;
+    font-size: 18px;
+    align-items: center;
+    transform: translateX(-18%);
+  }
 
-    hr {
-     display: none;
-     margin: 0;
-     padding: 0;
-    }
+  textarea {
+    border-radius: 0;
+    outline: none;
+    resize: none;
+    width: 150%;
+    transform: translateX(-18%);
+    height: 10%;
+  }
+
+  .textarea {
+    font-weight: 400;
+    font-size: 16px;
+    color: #b3bac5;
+    padding: 0.5rem 0.5rem;
+    font-family: 'Poppins', sans-serif;
+  }
+
+  .button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem 0;
+  }
+
+  .button .form_btn {
+    border-radius: 0;
+    padding: 0.8rem 1rem;
+    font-size: 17px;
+    font-weight: 500;
+    background-color: #fff;
+    cursor: pointer;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 2.5rem;
+    margin-right: 2.5rem;
+  }
+
+  .form_btn:hover {
+    background: #6070ff;
+    color: #fff;
+  }
+
+  .actives:active {
+    background: #2230d2;
+    color: #fff;
+  }
+
+  hr {
+    display: none;
+    margin: 0;
+    padding: 0;
+  }
 }
-
-
